# ParallenAlgorithm

./: CMakeLists.txt  main
src/: test.cpp  testresult  testresult2
